{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 32,
  "lineage": "b0d8d2b1-c353-4a3c-0553-7c5020987a0f",
  "resources": [
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0922164c8442deacc",
            "public_dns": "ec2-18-132-53-129.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.53.129",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-vpc/NAT-A-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0410258e720e74fe4",
            "public_dns": "ec2-3-11-243-115.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.243.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-vpc/NAT-B-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-06c87aa9085f55150",
            "public_dns": "ec2-18-130-87-82.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.87.82",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "demo-vpc/NAT-C-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-096e9d65a14df8a99",
            "owner_id": "673377339958",
            "tags": {
              "Name": "demo-vpc/igw"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0922164c8442deacc",
            "id": "nat-08dfb780264a41f19",
            "network_interface_id": "eni-0c55be599c37fab63",
            "private_ip": "10.10.1.193",
            "public_ip": "18.132.53.129",
            "subnet_id": "subnet-0e00e8724114b906a",
            "tags": {
              "Name": "demo-vpc/nat-a"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat-a",
            "module.public_subnets.aws_subnet.public-a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0410258e720e74fe4",
            "id": "nat-068ae799a497c6d76",
            "network_interface_id": "eni-077765b0864dfc8b8",
            "private_ip": "10.10.2.251",
            "public_ip": "3.11.243.115",
            "subnet_id": "subnet-03757ef1bbb137eef",
            "tags": {
              "Name": "demo-vpc/nat-b"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat-b",
            "module.public_subnets.aws_subnet.public-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c87aa9085f55150",
            "id": "nat-0577c296c5a1eb0b8",
            "network_interface_id": "eni-009ddc18a1fa48435",
            "private_ip": "10.10.3.136",
            "public_ip": "18.130.87.82",
            "subnet_id": "subnet-094c8395af1920297",
            "tags": {
              "Name": "demo-vpc/nat-c"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat-c",
            "module.public_subnets.aws_subnet.public-c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04ea23199b7368dc8",
            "owner_id": "673377339958",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08dfb780264a41f19",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc/rtb-app-a"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.nat.aws_eip.nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.public_subnets.aws_subnet.public-a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09f228e1b5fd9d177",
            "owner_id": "673377339958",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-068ae799a497c6d76",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc/rtb-app-b"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.nat.aws_eip.nat-b",
            "module.nat.aws_nat_gateway.nat-b",
            "module.public_subnets.aws_subnet.public-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-004cacfa764a61183",
            "owner_id": "673377339958",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0577c296c5a1eb0b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc/rtb-app-c"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.nat.aws_eip.nat-c",
            "module.nat.aws_nat_gateway.nat-c",
            "module.public_subnets.aws_subnet.public-c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01e96ac0af85e6870",
            "owner_id": "673377339958",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096e9d65a14df8a99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc/rtb-public-a"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-085b17c9c9316520e",
            "owner_id": "673377339958",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096e9d65a14df8a99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc/rtb-publics-b"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dd3190440aa0dcf6",
            "owner_id": "673377339958",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096e9d65a14df8a99",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-vpc/rtb-publics-c"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e05b7b0e762690f2",
            "route_table_id": "rtb-01e96ac0af85e6870",
            "subnet_id": "subnet-0e00e8724114b906a"
          },
          "dependencies": [
            "aws_route_table.public-a",
            "module.public_subnets.aws_subnet.public-a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04151827ccae570b9",
            "route_table_id": "rtb-085b17c9c9316520e",
            "subnet_id": "subnet-03757ef1bbb137eef"
          },
          "dependencies": [
            "aws_route_table.public-b",
            "module.public_subnets.aws_subnet.public-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "igw-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01276e67646b6c94d",
            "route_table_id": "rtb-0dd3190440aa0dcf6",
            "subnet_id": "subnet-094c8395af1920297"
          },
          "dependencies": [
            "aws_route_table.public-c",
            "module.public_subnets.aws_subnet.public-c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ccb0f5a84d07f356",
            "route_table_id": "rtb-04ea23199b7368dc8",
            "subnet_id": "subnet-0661ec67630e3cb49"
          },
          "dependencies": [
            "aws_route_table.app-a",
            "module.app_subnets.aws_subnet.private-a",
            "module.nat.aws_eip.nat-a",
            "module.nat.aws_nat_gateway.nat-a",
            "module.public_subnets.aws_subnet.public-a",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071e279f0e0f20125",
            "route_table_id": "rtb-09f228e1b5fd9d177",
            "subnet_id": "subnet-047e4581c896401e0"
          },
          "dependencies": [
            "aws_route_table.app-b",
            "module.app_subnets.aws_subnet.private-b",
            "module.nat.aws_eip.nat-b",
            "module.nat.aws_nat_gateway.nat-b",
            "module.public_subnets.aws_subnet.public-b",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dd0206bd83b5f4a",
            "route_table_id": "rtb-004cacfa764a61183",
            "subnet_id": "subnet-036ca7685421b08bc"
          },
          "dependencies": [
            "aws_route_table.app-c",
            "module.app_subnets.aws_subnet.private-c",
            "module.nat.aws_eip.nat-c",
            "module.nat.aws_nat_gateway.nat-c",
            "module.public_subnets.aws_subnet.public-c",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "office",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:673377339958:security-group/sg-0f0826ec028104ceb",
            "description": "Security Group for Allow Office IPs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0826ec028104ceb",
            "ingress": [
              {
                "cidr_blocks": [
                  "61.220.65.15/32",
                  "61.220.65.13/32"
                ],
                "description": "Allow traffic from office IPs",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow-office",
            "name_prefix": null,
            "owner_id": "673377339958",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-office"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress traffic",
            "from_port": 0,
            "id": "sgrule-1271117414",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f0826ec028104ceb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.office",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "61.220.65.15/32",
              "61.220.65.13/32"
            ],
            "description": "Allow traffic from office IPs",
            "from_port": 0,
            "id": "sgrule-974044374",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f0826ec028104ceb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.office",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:673377339958:subnet/subnet-0661ec67630e3cb49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.11.0/24",
            "id": "subnet-0661ec67630e3cb49",
            "map_public_ip_on_launch": false,
            "owner_id": "673377339958",
            "tags": {
              "Name": "private/app-a",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:673377339958:subnet/subnet-047e4581c896401e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.12.0/24",
            "id": "subnet-047e4581c896401e0",
            "map_public_ip_on_launch": false,
            "owner_id": "673377339958",
            "tags": {
              "Name": "private/app-b",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:673377339958:subnet/subnet-036ca7685421b08bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.13.0/24",
            "id": "subnet-036ca7685421b08bc",
            "map_public_ip_on_launch": false,
            "owner_id": "673377339958",
            "tags": {
              "Name": "private/app-c",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:673377339958:subnet/subnet-0e00e8724114b906a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0e00e8724114b906a",
            "map_public_ip_on_launch": true,
            "owner_id": "673377339958",
            "tags": {
              "Name": "public/public-a",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:673377339958:subnet/subnet-03757ef1bbb137eef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-03757ef1bbb137eef",
            "map_public_ip_on_launch": true,
            "owner_id": "673377339958",
            "tags": {
              "Name": "public/public-b",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:673377339958:subnet/subnet-094c8395af1920297",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-094c8395af1920297",
            "map_public_ip_on_launch": true,
            "owner_id": "673377339958",
            "tags": {
              "Name": "public/public-c",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d89a3bfeb282f2aa"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:673377339958:vpc/vpc-0d89a3bfeb282f2aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06e4271b5ace80954",
            "default_route_table_id": "rtb-0f328122558ad4f50",
            "default_security_group_id": "sg-06f4f48c302aec0d4",
            "dhcp_options_id": "dopt-fd154095",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d89a3bfeb282f2aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f328122558ad4f50",
            "owner_id": "673377339958",
            "tags": {
              "Name": "demo-vpc",
              "kubernetes.io/cluster/demo-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}